Closed Bug 1763368 Opened 4 years ago Closed 4 years ago

Misplaced Bengali letters since HarfBuzz update

Categories

(Core :: Graphics: Text, defect)

Firefox 99
Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
101 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox99 + fixed
firefox100 + fixed
firefox101 + fixed

People

(Reporter: yoasif, Assigned: RyanVM)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

Attached image image.png

From https://www.reddit.com/r/firefox/comments/txgzgp/bengali_font_mismatch_or_broken_after_firefox_99/

After installing firefox 99 Bengali word is misplaced its letter which was fine in previous 98 version.

I reduced a testcase from https://www.facebook.com/ntvdigital/posts/3470076836600704 which I have reproduced here.

Also attaching some screenshots of good and bad versions which ought to help show the issue.

12:29.93 INFO: Narrowed inbound regression window from [51ec329f, abb3901b] (3 builds) to [51ec329f, 2b5c6923] (2 builds) (~1 steps left)
12:29.93 INFO: No more inbound revisions, bisection finished.
12:29.93 INFO: Last good revision: 51ec329ff10ca01808cb455845a85d91bb194dc7
12:29.93 INFO: First bad revision: 2b5c6923eb59b7b3ea36ecceb915b2f5d6ba1494
12:29.93 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=51ec329ff10ca01808cb455845a85d91bb194dc7&tochange=2b5c6923eb59b7b3ea36ecceb915b2f5d6ba1494

Note: I was unable to reproduce this in Linux, I had to use macOS (like the user).

Has Regression Range: --- → yes
Has STR: --- → yes
Keywords: regression
Regressed by: 1754028

Set release status flags based on info from the regressing bug 1754028

:RyanVM, since you are the author of the regressor, bug 1754028, could you take a look?
For more information, please visit auto_nag documentation.

Flags: needinfo?(ryanvm)

This must be a harfbuzz regression affecting the AAT Bengali fonts (Bangla MN, Bangla Sangam MN). The same broken rendering reproduces in Chrome if these fonts are used. I'll file an issue upstream.

Flags: needinfo?(ryanvm)
Severity: -- → S3

I'm bumping this to S2 as it's a regression that has a pretty serious impact on the affected content; it's not just visually degraded, like poor hinting or spacing, but actually scrambled. The one mitigating factor is that only certain specific Indic fonts on macOS are affected, but for those affected (which include some default system fonts), it's a severe readability problem. Bascially, ti mxies up certani letter paris or combniatoins, maknig thngis trckiy to read wthi any confdience, and sometmies qutie msileadngi.

Severity: S3 → S2

After discussion with Jonathan, we're going to go ahead and proceed with a patch that reverts the regressing upstream change. The bug it was fixing didn't affect Firefox in the first place, so we should be good to go with that approach while upstream investigation continues.

This reverts the fix for upstream issue
https://github.com/harfbuzz/harfbuzz/issues/3314

Firefox was unaffected by that bug, so this should be safe to take
while the investigation continues upstream:
https://github.com/harfbuzz/harfbuzz/issues/3528

Assignee: nobody → ryanvm
Status: NEW → ASSIGNED
Pushed by rvandermeulen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/4df162c33af5 Revert upstream commit to fix Bengali text rendering regression. r=jfkthame

Comment on attachment 9271304 [details]
Bug 1763368 - Revert upstream commit to fix Bengali text rendering regression. r=jfkthame

Beta/Release Uplift Approval Request

  • User impact if declined: macOS users have misrendered Bengali fonts
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just reverts the regressing upstream change, which was a fix for a bug Firefox didn't have in the first place. Reftests are green on Try.
  • String changes made/needed:
Attachment #9271304 - Flags: approval-mozilla-release?
Attachment #9271304 - Flags: approval-mozilla-beta?

Asif, can you please have the reporter of this bug confirm that tomorrow's Nightly build renders correctly for them? I expect this to merge in time for that and the sooner we verify the fix the better if we want to get this into a 99.0.1 release.

Flags: needinfo?(yoasif)
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 101 Branch

From the original reporter:

I have checked this nightly version and its perfectly fine. Every bengali text viewed correctly there. thanks a lot.
I hope stable version will get this fixed soon. please make it soon with the tiny update if possible. Thanks a lot to firefox's quick response in this issue.

I was able to also confirm that my testcase worked fine as well.

Flags: needinfo?(yoasif)

Comment on attachment 9271304 [details]
Bug 1763368 - Revert upstream commit to fix Bengali text rendering regression. r=jfkthame

Approved for 100.0b4

Attachment #9271304 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9271304 [details]
Bug 1763368 - Revert upstream commit to fix Bengali text rendering regression. r=jfkthame

Approved for 99.0.1.

Attachment #9271304 - Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: