Bug 1763368 - Revert upstream commit to fix Bengali text rendering regression. r=jfkthame a=dmeehan

This reverts the fix for upstream issue
https://github.com/harfbuzz/harfbuzz/issues/3314

Firefox was unaffected by that bug, so this should be safe to take
while the investigation continues upstream:
https://github.com/harfbuzz/harfbuzz/issues/3528

Differential Revision: https://phabricator.services.mozilla.com/D143186